Github Gossip - modif view index.html.erb

--- a/S04_rails_initiation/S04J3/the-gossip-project/app/views/gossips/index.html.erb
+++ b/S04_rails_initiation/S04J3/the-gossip-project/app/views/gossips/index.html.erb
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-	<h1>naula</h1>
+	<h1>naula & brice : on finira ce week end !</h1>
+	<h2> you already know why !!</h2>
 	
 </body>
 </html>
