twitter is working !

--- a/S06_rails_avance/S06J4/twitter-bis/app/views/home/index.html.erb
+++ b/S06_rails_avance/S06J4/twitter-bis/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Formulaire Twitter</h1>
 
-<%= form_tag "/", method: "post"  %>
+<%= form_tag "/", method: "get"  %>
 	<%= text_field_tag( :tweet , 'tweet max 160', options={:maxlength => 160})  %>
-	<%= hidden_field_tag :params_tweet , "tweet" %>
 	<%= submit_tag(value = "Tweet") %>
