--- a/S07_html_css/S07J2_formulaires/formulaire-stylay/app/views/devise/registrations/new.html.erb
+++ b/S07_html_css/S07J2_formulaires/formulaire-stylay/app/views/devise/registrations/new.html.erb
@@ -4,14 +4,19 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label 'Email adress' %><br />
     <%= f.email_field :email, autofocus: true %>
+  </div>
+
+  <div class="phone">
+    <%= f.label 'Phone (recommended)' %><br />
+    <%= f.email_field :phone, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <!-- <em>(<%= @minimum_password_length %> characters minimum)</em> -->
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
