--- a/S07_html_css/S07J2_formulaires/formulaire-stylay/app/views/layouts/application.html.erb
+++ b/S07_html_css/S07J2_formulaires/formulaire-stylay/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FormulaireStylay</title>
+    <title>Intuit Accounts - Sign Up	</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+	<body>
+		<p class="notice"><%= notice %></p>	
+		<p class="alert"><%= alert %></p>
+
+		<%= yield %>
+	</body>
 </html>
