--- a/S07_html_css/S07J2_formulaires/formulaire-stylay/app/assets/stylesheets/intuits.scss
+++ b/S07_html_css/S07J2_formulaires/formulaire-stylay/app/assets/stylesheets/intuits.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the Intuits controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+	background-color: #ECEEF1;
+	text-align: center;
+	color: #4C4C4C;
+	font-size: 14px;
+	font-family: AvenirNext,Avenir,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	}
+
+
+div.form_content{
+	background-color: #fff;
+	text-align: center;
+	width: 500px;
+    margin: 0 auto;
+    margin-top: 200px;
+   
+}
+
+.turbo, .quick, .mint{
+	
+width: 140px;
+height: 30px;
+}
+.line{
+	border-bottom:1px solid grey;
+	width: 450px;
+	text-align: center;
+}
