--- a/S07_html_css/S07J4_landingPages/landing-pages/app/views/home/checkr.html.erb
+++ b/S07_html_css/S07J4_landingPages/landing-pages/app/views/home/checkr.html.erb
@@ -13,44 +13,47 @@
 		<section id="s_part1">
 			<header id="header_part1">
 				<div id="d_image_part1">
-					<%= image_tag('checkr/logo.png') %>
+					<%= image_tag('checkr/logo.png')    %>
 				</div>
 				<nav id="n_nav1part1">
-					<ul>
+					<ul class="ulniv1">
 						<li class="liniv1"><a href="https://checkr.com/product/">Product</a>
-							<ul class="niv2">
-								<li><a class="" href="https://checkr.com/product/">Overview</a></li>
-								<li><a class="" href="https://checkr.com/product/screenings/">Screenings</a></li>
-								<li><a class="" href="https://checkr.com/product/compliance/">Compliance</a></li>
-								<li><a class="" href="https://checkr.com/product/security/">Security</a></li>
+							<ul class="ulniv2">
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/product/">Overview</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/product/screenings/">Screenings</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/product/compliance/">Compliance</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/product/security/">Security</a></li>
 							</ul>
 						</li>
 						<li class="liniv1"><a href="https://checkr.com/industries/">Industries</a>
-							<ul class="niv2">
-								<li ><a class="" href="https://checkr.com/industries/">Overview</a></li>
-								<li><a class="" href="https://checkr.com/industries/contact-centers/">Contact Centers</a></li>
-								<li><a class="" href="https://checkr.com/industries/financial-services/">Financial Services</a></li>
-								<li><a class="" href="https://checkr.com/industries/retail-hospitality/">Retail &#038; Hospitality</a></li>
-								<li><a class="" href="https://checkr.com/industries/healthcare/">Healthcare</a></li>
-								<li><a class="" href="https://checkr.com/industries/nonprofit/">Non Profit</a></li>
-								<li><a class="" href="https://checkr.com/industries/staffing/">Staffing</a></li>
-								<li><a class="" href="https://checkr.com/industries/on-demand-economy/">On-Demand Economy</a></li>
-								<li><a class="" href="https://checkr.com/industries/manufacturing/">Manufacturing</a></li>
-								<li><a class="" href="https://checkr.com/industries/software-and-technology/">Software &#038; Technology</a></li>
-								<li><a class="" href="https://checkr.com/industries/small-business/">Small Business</a></li>
-								<li><a class="" href="https://checkr.com/industries/p2p-marketplaces/">P2P Marketplaces</a></li>
+							<ul class="ulniv2">
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/">Overview</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/contact-centers/">Contact Centers</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/financial-services/">Financial Services</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/retail-hospitality/">Retail &#038; Hospitality</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/healthcare/">Healthcare</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/nonprofit/">Non Profit</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/staffing/">Staffing</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/on-demand-economy/">On-Demand Economy</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/manufacturing/">Manufacturing</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/software-and-technology/">Software &#038; Technology</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/small-business/">Small Business</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/industries/p2p-marketplaces/">P2P Marketplaces</a></li>
 							</ul>
 						</li>
 						<li class="liniv1"><a href="https://checkr.com/resources/">Resources</a>
-							<ul class="niv2">
-								<li><a class="" href="https://checkr.com/resources/">Overview</a></li>
-								<li><a class="" href="https://checkr.com/resources/white-papers/">Guides &#038; White Papers</a></li>
-								<li><a class="" href="https://checkr.com/resources/faq/">FAQ</a></li>
+							<ul class="ulniv2">
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/resources/">Overview</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/resources/white-papers/">Guides &#038; White Papers</a></li>
+								<li class="liniv2"><a class="a_niv2" href="https://checkr.com/resources/faq/">FAQ</a></li>
 							</ul>
 						</li>
 					</ul>
 
 				</nav>
+				<div id="d_login">
+					LOG IN
+				</div>
 			</header>
 			<div id="d_bloc_part1">
 				<div id="d_text_part1">
@@ -67,9 +70,41 @@
 				</div>
 			</div>
 		</section>
+<!-- ****************************************************************************************** -->
+<!-- ****************************************************************************************** -->
+<!-- ****************************************************************************************** -->
+<!-- ****************************************************************************************** -->
 		<section id="s_part2">
-			<p>More Than 10,000 Businesses Trust Checkr for Their Background Screenings</p>				
+			<h3>More Than 10,000 Businesses Trust Checkr for Their Background Screenings</h3>
+			<div id="d_part2">
+				<div id="d_image1_part2">
+					<%= image_tag('checkr/instacart-logo@2x.png',class:"d_img_part2")%>
+				</div>	
+				<div id="d_image2_part2">
+					<%= image_tag('checkr/logo_grubhub_update.gif',class:"d_img_part2")%>
+				</div>	
+				<div id="d_image3_part2">
+					<%= image_tag('checkr/Uber_white_2@2x.jpeg',class:"d_img_part2")%>
+				</div>	
+				<div id="d_image4_part2">
+					<%= image_tag('checkr/postmates_logo_s-1.png',class:"d_img_part2")%>
+				</div>	
+				<div id="d_image5_part2">
+					<%= image_tag('checkr/zenefits.gif',class:"d_img_part2")%>
+				</div>	
+				<div id="d_image6_part2">
+					<%= image_tag('checkr/Handy@2x.jpg',class:"d_img_part2")%>
+				</div>
+			</div>	
 		</section>
+		<section id="s_part3">
+			
+		</section>
+<!-- ****************************************************************************************** -->
+<!-- ****************************************************************************************** -->
+<!-- ****************************************************************************************** -->
+<!-- ****************************************************************************************** -->
+
 	</div>
 </body>
 </html>
