S07J4 projet landings pages a gogo : debut section 4

--- a/S07_html_css/S07J4_landingPages/landing-pages/app/views/home/checkr.html.erb
+++ b/S07_html_css/S07J4_landingPages/landing-pages/app/views/home/checkr.html.erb
@@ -51,8 +51,13 @@
 					</ul>
 
 				</nav>
-				<div id="d_login">
-					LOG IN
+				<div id="d_login_get-started">
+					<div id="d_login">
+						LOG IN
+					</div>
+					<div class="get-started">
+						<a href="https://checkr.com/contact-us/">GET STARTED</a>					
+					</div>					
 				</div>
 			</header>
 			<div id="d_bloc_part1">
@@ -70,10 +75,10 @@
 				</div>
 			</div>
 		</section>
-<!-- ****************************************************************************************** -->
-<!-- ****************************************************************************************** -->
-<!-- ****************************************************************************************** -->
-<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
 		<section id="s_part2">
 			<h3>More Than 10,000 Businesses Trust Checkr for Their Background Screenings</h3>
 			<div id="d_part2">
@@ -98,13 +103,55 @@
 			</div>	
 		</section>
 		<section id="s_part3">
+			<h3>The Next Generation of Background Checks</h3>
+			<div id="d_part3_cont_img">
+				<div id="d_part3_bloc1" class="d_part3_bloc">
+					<div class="d_part3_img">
+						<%= image_tag("https://15743-presscdn-0-7-pagely.netdna-ssl.com/wp-content/uploads/2015/10/home-mobile.svg" , class:"aligncenter")%>
+					</div>
+					<strong>Mobile-Friendly</strong>
+					<p style="text-align: center;">Create a positive applicant experience with simple, mobile-friendly onboarding.</p>
+				</div>
+				<div id="d_part3_bloc2" class="d_part3_bloc">
+					<div class="d_part3_img">
+						<%= image_tag("https://15743-presscdn-0-7-pagely.netdna-ssl.com/wp-content/uploads/2015/10/home-computer_easy.svg" , class:"aligncenter")%>
+					</div>
+					<strong>Easy to Understand</strong>
+					<p style="text-align: center;">Color-coded reports and an intuitive interface makes it possible to review information faster. 
+						<a href="http://checkr.com/sample-report/" class="a_vert">See a sample employee background report.</a>
+					</p>
+				</div>
+				<div id="d_part3_bloc3" class="d_part3_bloc">
+					<div class="d_part3_img">
+						<%= image_tag("https://15743-presscdn-0-7-pagely.netdna-ssl.com/wp-content/uploads/2015/10/home-automation.svg" , class:"aligncenter")%>
+					</div>
+					<strong>Convenient Automation</strong>
+					<p style="text-align: center;">Reports and violations are categorized to help you remain compliant with individual assessment requirements.</p>
+				</div>
+				<div id="d_part3_bloc4" class="d_part3_bloc">
+					<div class="d_part3_img">
+						<%= image_tag("https://15743-presscdn-0-7-pagely.netdna-ssl.com/wp-content/uploads/2015/10/home-communications.svg" , class:"aligncenter")%>
+					</div>
+					<strong>Simplified and Compliant Communication</strong>
+					<p style="text-align: center;">Automated compliance tools allow you to send adverse action communications in seconds, directly from your dashboard.</p>
+				</div>
+				<div id="d_part3_bloc5" class="d_part3_bloc">
+					<div class="d_part3_img">
+						<%= image_tag("https://15743-presscdn-0-7-pagely.netdna-ssl.com/wp-content/uploads/2015/10/home-analytics.svg" , class:"aligncenter")%>
+					</div>
+					<strong>Fast and Accurate</strong>
+					<p style="text-align: center;">Understand the profile of your applicants and find the best pool of candidates using integrated analytics and reports.</p>
+				</div>
+			</div>
 			
 		</section>
-<!-- ****************************************************************************************** -->
-<!-- ****************************************************************************************** -->
-<!-- ****************************************************************************************** -->
-<!-- ****************************************************************************************** -->
-
+		<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
+		<!-- ****************************************************************************************** -->
+		<section d="s_part4">
+			
+		</section>
 	</div>
 </body>
 </html>
