--- a/S07_html_css/S07J4_landingPages/landing-pages/app/assets/stylesheets/checkr.css
+++ b/S07_html_css/S07J4_landingPages/landing-pages/app/assets/stylesheets/checkr.css
@@ -1,12 +1,26 @@
 body {
+	height: 100%;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 #d_bloc_page{
-	width: 100%;
 	margin: auto;
+	min-height: 100%;
+	min-width: 100%;
 }
 section{
 	padding: 0px 200px;
 }
+h3 { 
+	text-align: center;
+	font-size: 1.7em;
+	font-family: "Palatino","Goudy Bookletter 1911", sans-serif;
+	padding: 40px 0px 30px 0px;
+}
+/***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
 #s_part1 {
 	background:linear-gradient(0deg,rgba(60, 121, 187, 0.6),rgba(60, 121, 187, 0.6)),url('https://checkr.com/wp-content/uploads/2015/10/checkr_header_industries-1-1200x320.jpg');
 	background-repeat: no-repeat;
@@ -33,11 +47,27 @@ ul ul {
 	/*display:none;*/
 }
 /****************************************************************/
+#d_login_get-started{
+	display: flex;
+	flex-direction: column;
+}
 #d_login {
 	flex:3;
 	text-align: right;
 }
-
+.get-started a {
+	color: #E9CA2C;
+	letter-spacing: 0.1em;
+	border: 2px solid #E9CA2C;
+	padding: 1.5rem 2.3rem 1.5rem;
+	background: url(https://checkr.com/wp-content/themes/checkr/assets/img/arrow-right_yellow.svg) center center/1.11rem 0.89rem no-repeat;
+	background-position: 90%;
+	font-family: "proxima-nova",sans-serif;
+}
+.get-started a:hover{
+	background-color: #E9CA2C ;
+	color: #102533 ;
+}
 #d_bloc_part1 {
 	display: flex;
 	flex-direction: row;
@@ -53,6 +83,8 @@ ul ul {
 	flex-direction: column;
 }
 /***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
 #d_part2 {
 	display: flex;
 	flex-direction: row;
@@ -60,12 +92,38 @@ ul ul {
 	align-items: center;
 	justify-content: space-between;
 }
-h3 { 
-	text-align: center;
-	font-size: 1.7em;
-	font-family: "Palatino","Goudy Bookletter 1911", sans-serif;
-}
 .d_img_part2 {
 	width: 100%;
 }
+/***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
+#s_part3{
+	background-color: #f5f9fb; /* # f5f9fb*/
+	padding: 30px 30px;
+}
+#s_part3 p {
+	Line-Height: 1.5;
+}
+#d_part3_cont_img {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.d_part3_bloc {
+	width: 300px;
+	text-align: center;
+	margin: 15px;
+}
+.d_part3_img{
+	margin:  15px;
+}
+#s_part3 p {
+	color: gray;
+}
+.a_vert{
+	color: #6CC496;
+}
+/***********************************FIN SECTION***********************************/
+/***********************************FIN SECTION***********************************/
 /***********************************FIN SECTION***********************************/
