S07J4 projet landings pages a gogo : section 4

--- a/S07_html_css/S07J4_landingPages/landing-pages/app/views/home/checkr.html.erb
+++ b/S07_html_css/S07J4_landingPages/landing-pages/app/views/home/checkr.html.erb
@@ -150,7 +150,20 @@
 		<!-- ****************************************************************************************** -->
 		<!-- ****************************************************************************************** -->
 		<section d="s_part4">
-			
+			<h3 style="text-align: center;">Tailored to Fit Your Industry’s Needs</h3>
+			<div id="d_part4_img">
+				<a href="https://checkr.com/industries/contact-centers/" class="column post-preview page" style="background-image: url(&quot;/wp-content/uploads/2017/03/Smiling-worker-doing-her-job-with-a-headset-while-looking-at-the-camera.jpeg&quot;);">
+					<div class="img-blur" style="background-image: url(&quot;/wp-content/uploads/2017/03/Smiling-worker-doing-her-job-with-a-headset-while-looking-at-the-camera.jpeg&quot;);"></div>
+					<div class="content">
+						<span class="h6">Contact Centers&nbsp;<svg class="icon arrow"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow"></use></svg></span>
+					</div>
+					<div class="content_hover">
+						<span>Checkr has built in specific tools to reduce time to hire and manage the complexity of screening candidates in a contact center.</span>
+					</div>
+					<img src="" class="sizer" width="5" height="7">
+				</a>
+
+			</div>
 		</section>
 	</div>
 </body>
