--- a/S07_html_css/S07J4_landingPages/landing-pages/app/assets/stylesheets/checkr.css
+++ b/S07_html_css/S07J4_landingPages/landing-pages/app/assets/stylesheets/checkr.css
@@ -1,16 +1,12 @@
 body {
-	height: 100%;
-	width: 100%;
 	margin: 0px;
 	padding: 0px;
 }
 #d_bloc_page{
 	margin: auto;
-	min-height: 100%;
-	min-width: 100%;
 }
 section{
-	padding: 0px 200px;
+	padding: 0px 130px;
 }
 h3 { 
 	text-align: center;
@@ -127,3 +123,10 @@ ul ul {
 /***********************************FIN SECTION***********************************/
 /***********************************FIN SECTION***********************************/
 /***********************************FIN SECTION***********************************/
+#d_part4 {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+}
