--- a/S08_html_css_js/S08J3_JS/calc.css
+++ b/S08_html_css_js/S08J3_JS/calc.css
@@ -1,7 +1,10 @@
 @media (min-width: 391px) {
-    .calculator {
-        width: 390px;
-    }
+	#container {
+		width: 390px;
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+	}
 }
 @font-face {
 	font-family: 'eurostile-extended-black';
@@ -21,18 +24,18 @@ h1 {
 	background-color: #0A8;
 	font-size: 35px;
 	display: flex;
-/*	margin: 90px 90px;*/
+	/*	margin: 90px 90px;*/
 	flex-wrap: wrap;
 	justify-content: center;
 	align-content: center;	
-/*	box-sizing: border-box;*/
+	/*	box-sizing: border-box;*/
 	width: 100%;
 }
 #brand {
 	font-family: eurostile-extended-black , sans-serif;
 	color: white;
 	text-align: right;
-/*	display: inline-block;*/
+	/*	display: inline-block;*/
 }
 #screen{
 	background-color: #EFD;
@@ -45,6 +48,7 @@ h1 {
 	width: 100%;
 	direction: rtl; /*sens de lecture de right to left*/
 	white-space: nowrap; /* interdiction de passer à la ligne */
+	box-shadow: inset 0 0 10px 5px rgba(128, 128, 128, 0.78);
 }
 .keys {
 	background-color: #037;
@@ -60,6 +64,15 @@ h1 {
 	width: 20%;
 	box-sizing: border-box;
 }
+.keys:active {
+	box-shadow:none;	
+}
+.keys:hover {
+	background: linear-gradient(#2CA500FF 0% , #4BFF2BFF 100%);
+}
 #c-ce {
 	background-color: #FF0000FF;
+}
+#c-ce:hover {
+	background : linear-gradient(#950000FF 0% , #FF0000FF 100%);
 }
