S08J4 jQuery carousel initial commit

--- a/S08_html_css_js/S08J3_JS/calc.css
+++ b/S08_html_css_js/S08J3_JS/calc.css
@@ -35,7 +35,6 @@ h1 {
 	font-family: eurostile-extended-black , sans-serif;
 	color: white;
 	text-align: right;
-	/*	display: inline-block;*/
 }
 #screen{
 	background-color: #EFD;
@@ -49,6 +48,7 @@ h1 {
 	direction: rtl; /*sens de lecture de right to left*/
 	white-space: nowrap; /* interdiction de passer à la ligne */
 	box-shadow: inset 0 0 10px 5px rgba(128, 128, 128, 0.78);
+	border-radius: 9px;
 }
 .keys {
 	background-color: #037;
