--- a/S09_JS_front/S09J2/api-gmaps/app/assets/stylesheets/maps.scss
+++ b/S09_JS_front/S09J2/api-gmaps/app/assets/stylesheets/maps.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Maps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+	text-align: center;
+}
+
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+#map{
+	width: 100%;
+	height: 100%;
+}
