--- a/S09_JS_front/S09J2/api-gmaps/app/assets/stylesheets/application.css
+++ b/S09_JS_front/S09J2/api-gmaps/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+#container {
+	height: 600px;
+	width: 600px;
+	display: flex;
+	flex-direction: column;
+}
