--- a/S09_JS_front/S09J2/api-gmaps/app/assets/stylesheets/maps.scss
+++ b/S09_JS_front/S09J2/api-gmaps/app/assets/stylesheets/maps.scss
@@ -8,11 +8,11 @@ h1 {
 
 body {
 	height: 100%;
-	margin: 0;
-	padding: 0;
+	margin: 10px;
+	padding: 10px;
 }
 
-#map{
-	width: 100%;
-	height: 100%;
+#gmap{
+	width: 80%;
+	height: 80%;
 }
