--- a/S09_JS_front/S09J2/api-gmaps/app/views/layouts/application.html.erb
+++ b/S09_JS_front/S09J2/api-gmaps/app/views/layouts/application.html.erb
@@ -6,11 +6,11 @@
 
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
 </head>
 
 <body>
-	<%= yield %>
-
+	<div id="container">
+		<%= yield %>
+	</div>
 </body>
 </html>
