--- a/S09_JS_front/S09J2/api-gmaps/app/views/maps/index.html.erb
+++ b/S09_JS_front/S09J2/api-gmaps/app/views/maps/index.html.erb
@@ -6,11 +6,13 @@
 <%= text_field_tag( :message , nil,  options={:class =>'field', :placeholder => 'message short text only 20ch', :maxlength => 20} )  %>
 <%= submit_tag("Mark!" , id:"submit") %>
 <% end %>
-
+<p> Vous avez rentré</p>
+<%binding.pry%>
+<p>Latitude : <%=@map.latitude%></p>
 <div id="gmap"></div>
 
 <%= javascript_include_tag "maps" %>
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_api_key}&callback=myMap(#{@map.latitude} , #{@map.longitude})", :defer => "defer" , async: true %>
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_api_key}&callback=myMap", :defer => "defer" , async: true %>
 
 <!-- remplace le 
 <script src="https://maps.googleapis.com/maps/api/js?key=<%=Figaro.env.google_api_key%>&callback=myMap" async defer></script>
